# bagua-core

./: .gitmodules  Cargo.toml  README.md  setup.py
bagua-core-c/: Cargo.toml  Makefile  bagua_allreduce.cc  bagua_tensorflow_mnist.py  bagua_tensorflow_synthetic_benchmark.py  bagua_tf.py  test.py
bagua-core-c/src/: lib.rs
bagua-core-internal/: Cargo.toml  build.rs
bagua-core-internal/kernels/: bagua_kernels.cu
bagua-core-internal/src/: cuda_utils.rs  lib.rs  torch_ffi.rs
bagua-core-internal/src/comm_ops/: centralized_full_precision_synchronous.rs  centralized_low_precision_synchronous.rs  custom_op.rs  decentralized_full_precision_asynchronous.rs  decentralized_full_precision_synchronous.rs  decentralized_low_precision_synchronous.rs  mod.rs  python_ffi_op.rs
bagua-core-internal/src/communicators/: mod.rs
bagua-core-internal/src/datatypes/: mod.rs
bagua-core-internal/src/kernels/: mod.rs
bagua-core-internal/src/telemetry/: mod.rs
bagua-core-py/: Cargo.toml
bagua-core-py/src/: lib.rs
bagua-kai-backend/: Cargo.toml  backend.rs
bagua-kai-backend/cc/: CMakeLists.txt  bagua_kai_backend.cc  bagua_kai_backend.h  bagua_kai_backend_test.cc
bagua-kai-backend/src/: backend.rs  cbind.rs  lib.rs
bagua-opentelemetry/: Cargo.toml
bagua-opentelemetry/src/: lib.rs  runtime.rs
bagua-opentelemetry/src/exporter/: agent.rs  mod.rs
bagua-store/: Cargo.toml  build.rs
bagua-store/proto/bagua/: kv_store.proto
bagua-store/src/: lib.rs  memdb.rs
examples/: Cargo.toml  build.rs  single_process_multi_gpu.rs
python/bagua_core/: __init__.py  _environment.py
