[package]
name = "bagua_comm_core_c"
version = "0.1.0"
edition = "2018"

[lib]
name = "bagua_comm_core_cbind"
crate-type = ["dylib"]
path = "src/lib.rs"

[dependencies]
bagua_core_internal = { path = "../bagua_core_internal" }
libc = "0.2"
tracing = "0.1"
tracing-subscriber = "0.2"
anyhow = "1.0"
color-eyre = "0.5"
numpy = "0.14.1"
parking_lot = { version = "0.11", features = ["deadlock_detection"] }
openssl-sys = { version = "*", features = ["vendored"] }
log = { version = "0.4.8", features = ["std"] }
env_logger = "*"

[dependencies.pyo3]
version = "0.14.1"
features = ["extension-module"]

[build-dependencies]
shadow-rs = "0.6"
cpp_build = "0.5"
cc = "1.0"
cmd_lib = "1.0"
which = "4.2"
