[package]
name = "bagua-kai-backend"
version = "0.0.0"
publish = false
edition = "2018"

[lib]
name = "bagua_kai_backend"
crate-type = ["rlib", "dylib"]
path = "src/lib.rs"

[dependencies]
bagua-core-internal = { path = "../bagua-core-internal" }
bagua-store = { path = "../bagua-store" }
parking_lot = { version = "0.11", features = ["deadlock_detection"] }
tonic = "0.4"
prost = "0.7"
tokio = { version = "1.8.0", features = ["full"] }
argparse = "0.2.2"
tracing = "0.1"
tracing-subscriber = "0.2"

[dev-dependencies]
nix = { version = "0.8" }
