[package]
name = "bagua-store"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "bagua_store"
crate-type = ["rlib", "dylib"]
path = "src/lib.rs"

[dependencies]
parking_lot = { version = "0.11", features = ["deadlock_detection"] }
tonic = "0.4"
prost = "0.7"
tokio = { version = "1.8.0", features = ["full"] }

[build-dependencies]
tonic-build = "0.4"
